No top drag indicator if a window is dragged from top in portrait screen orientation.

1. Added IndicatorType
   kDragAreaLeft, kCannotSnapLeft to show only left/top drag indicator,
   kDragAreaRight, kCannotSnapRight to show only right/bottom drag indicator,
   only kDragAreRight and kCannotSnapRight are used in this change, but still
   added kDragAreLeft and kCannotSnapLeft to keep consistence.

2. Move the logic to update the opacity of highlight view and label view from
   SplitViewDragIndicators to SplitViewHighligtView and RotatedImageLabelView
   instead.

see recorded video:
https://drive.google.com/file/d/0B5I0jFeLxqIiOGV3c0puTkJpTElBNUFSUlZpNEp6TElKUHJZ/view?usp=sharing

Bug: 871607
Test: SplitViewTabDraggingTest.DragIndicatorsInPortraitOrientationTest
Change-Id: I64f76766cd14dd2bca686be3f13d274993f24639
Reviewed-on: https://chromium-review.googlesource.com/1167998
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Min Chen <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583405}
Former-commit-id: 632ec8dbe970b1dd6ec37738e63a0c3df67e6185