ash/wm/splitview/split_view_drag_indicators.h
@@ -22,9 +22,30 @@ namespace ash {
 // Enum which contains the possible states SplitViewDragIndicators can be in.
 enum class IndicatorState {
   kNone,
+  // Showing both left/top and right/bottom drag guidances.
   kDragArea,
+
+  // Showing only left/top drag guidance.
+  kDragAreaLeft,
+
+  // Showing only right/bottom drag guidance.
+  kDragAreaRight,
+
+  // Showing both left/top and right/bottom cannot drag indicators.
   kCannotSnap,
+
+  // Showing only left/top cannot drag indicator.
+  kCannotSnapLeft,
+
+  // Showing only right/bottom cannot drag indicator.
+  kCannotSnapRight,
+
+  // Showing a left/top preview area with the same bounds as left/top snapped
+  // window.
   kPreviewAreaLeft,
+
+  // Showing a right/bottom preview area with the same bounds as right/bottom
+  // snapped window.
   kPreviewAreaRight
 };
 
@@ -43,6 +64,15 @@ enum class IndicatorType {
 // window has entered a snap region.
 class ASH_EXPORT SplitViewDragIndicators {
  public:
+  static bool IsPreviewAreaState(IndicatorState indicator_state);
+  static bool IsLeftIndicatorState(IndicatorState indicator_state);
+  static bool IsRightIndicatorState(IndicatorState indicator_state);
+  static bool IsCannotSnapState(IndicatorState indicator_state);
+
+  // Calculates whether the  preview area should physically be on the left or
+  // top of the screen.
+  static bool IsPreviewAreaOnLeftTopOfScreen(IndicatorState indicator_state);
+
   SplitViewDragIndicators();
   ~SplitViewDragIndicators();
 
