ash/wm/splitview/split_view_utils.cc
@@ -9,6 +9,7 @@
 #include "ui/compositor/layer_animation_observer.h"
 #include "ui/compositor/layer_animator.h"
 #include "ui/compositor/scoped_layer_animation_settings.h"
+#include "ui/gfx/geometry/rect.h"
 
 namespace ash {
 
@@ -188,6 +189,10 @@ void DoSplitviewTransformAnimation(ui::Layer* layer,
   ApplyAnimationSettings(&settings, animator, duration, tween,
                          preemption_strategy, delay);
   layer->SetTransform(target_transform);
+}
+
+void TransposeRect(gfx::Rect* rect) {
+  rect->SetRect(rect->y(), rect->x(), rect->height(), rect->width());
 }
 
 }  // namespace ash
